--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,9 +1,9 @@
-# mountpoints:
-#   /: https://drive.google.com/drive/folders/1fo5ZxoTn7gOBnZeO1SMUMQtqYko0nv7e
 mountpoints:
-  /:
-    url: https://content.da.live/manavluhar/commerce-eds/
-    type: markup
+  /: https://drive.google.com/drive/folders/1fo5ZxoTn7gOBnZeO1SMUMQtqYko0nv7e
+# mountpoints:
+#   /:
+#     url: https://content.da.live/manavluhar/commerce-eds/
+#     type: markup
 
 folders:
   /products/: /products/default
